update the solution funciton

--- a/index.html
+++ b/index.html
@@ -8,60 +8,7 @@
   </head>
   <body>
     <p class="text">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. At omnis commodi
-      doloremque. Ipsam amet iure accusamus dolore unde recusandae aspernatur
-      consectetur officiis asperiores sunt vel aliquid quidem sapiente illum
-      autem ut blanditiis cum beatae, debitis sint. At voluptatibus expedita
-      velit ipsum nostrum fugit aliquid necessitatibus veritatis amet nihil
-      alias ea, minima totam aut. Qui cupiditate inventore illo ab vitae,
-      perspiciatis cumque unde repudiandae eius nihil harum recusandae facilis
-      sequi voluptatibus consectetur exercitationem odit modi error maxime nobis
-      ut architecto quae? Quaerat alias sit doloremque. Iusto aliquid
-      necessitatibus deleniti, obcaecati numquam aut nobis laboriosam ipsam eum!
-      Commodi dolor laborum ad dolore quae perspiciatis quis similique, dicta,
-      quibusdam quos, numquam aut tempora natus perferendis officiis! Iusto,
-      quisquam fugiat. Aspernatur exercitationem aperiam earum quia nihil nulla
-      a iste nemo obcaecati magni quaerat maxime asperiores, provident pariatur
-      laudantium necessitatibus incidunt repudiandae consequatur, sunt est
-      explicabo. Pariatur numquam nihil porro eos vel velit cumque obcaecati!
-      Sequi placeat debitis, aut ut, consequatur reprehenderit ipsa,
-      consequuntur exercitationem expedita corrupti incidunt odit veritatis
-      nostrum similique. Quae eos nesciunt repellat animi nostrum ipsam commodi
-      odit qui unde natus at consectetur ea aliquid, debitis nam temporibus
-      architecto, minima omnis, recusandae tenetur! Eos, enim? Suscipit modi
-      blanditiis deleniti dolorem voluptate ipsum aspernatur maiores, aut ut
-      vero, cumque voluptates vel adipisci accusamus dolorum assumenda
-      laudantium repellendus impedit dolor provident ipsa nesciunt! Illo harum
-      cum, adipisci quam et nesciunt corporis ex placeat quisquam tempore quo
-      soluta, quae quod ratione iste perspiciatis minus atque earum obcaecati
-      distinctio natus accusamus. Eligendi repellat vitae temporibus nostrum,
-      vel ipsa laboriosam ex dolorum quis alias, corrupti ipsum! Aliquam ex est
-      nesciunt soluta ut odio consectetur expedita voluptas nihil quae, ab
-      maxime quibusdam ipsa vel? Aut architecto assumenda hic illum reiciendis,
-      sit eum minima voluptatibus, accusamus consequatur explicabo dolores nam
-      autem, quis nostrum. Nisi cum recusandae excepturi sed sequi eos, deleniti
-      debitis exercitationem molestias ducimus mollitia tenetur ut eaque atque?
-      Impedit rerum veritatis minima repudiandae, fuga illum recusandae esse.
-      Sapiente quo non blanditiis nesciunt! Temporibus aliquam magnam
-      accusantium. Officiis modi fugiat quod. Ab quibusdam distinctio corporis.
-      Autem, beatae voluptatibus. Repellendus quia tempore quidem consequatur
-      mollitia laboriosam et iure, quibusdam, pariatur exercitationem modi
-      nesciunt quam assumenda ad sapiente cumque dignissimos, fugiat earum
-      eveniet illum. Quisquam repellat praesentium saepe magni aliquid unde
-      soluta nesciunt adipisci asperiores, officiis fugiat sit perspiciatis
-      ducimus, temporibus autem sequi voluptatem eius repellendus? Fugit
-      voluptates, ab, dolor odit, vero nulla nobis voluptate totam omnis
-      corporis atque ipsum. Optio non autem repudiandae impedit nihil, est
-      incidunt asperiores explicabo aperiam consequuntur architecto quaerat nisi
-      et quos deleniti commodi quod enim necessitatibus doloribus totam? Autem
-      labore nulla quae suscipit ducimus ut consequuntur veniam maiores facilis
-      ex eveniet voluptate possimus earum fugit voluptatibus harum, et nisi
-      blanditiis ipsa esse id cumque culpa asperiores quos! Ea, recusandae dolor
-      dicta corporis maiores accusantium nisi repudiandae cumque error quaerat
-      odio aliquam asperiores aut in optio totam rerum! Excepturi veritatis
-      omnis quas rerum? Perspiciatis consequatur delectus modi eum cupiditate
-      eius officiis, nihil enim iusto quidem officia! Minus dolorum ipsum
-      temporibus labore maiores. Fuga, assumenda cumque.
+      SMS messages are really short
     </p>
     <script src="/main.js"></script>
   </body>
